<resources>
    <string name="app_name">Milk Bank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_hmb">HMB</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_stock">Stock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="share">Share </string>
    <string name="rate">Rate</string>
    <string name="menu_dev_email">Email: developer254@gmail.com</string>
    <string name="app_about">An android reference application that leverages Google\'s FHIR Android SDK and WHO\'s Neo-natal Digital Adaptation Kit (NNDAK) to build a standard\'s based mobile solution to link Newborn Units and Human Milk Banks</string>
    <string name="menu_active">"Active "</string>
    <string name="menu_discharged">Discharged</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="query_hint_patient_search">Search</string>
    <string name="description_status">Image</string>
    <string name="add_patient">Register a patient</string>
    <string name="navya_patel">Navya Patel</string>
    <string name="_50_years_old">50 years old</string>
    <string name="id_456">Id: #...456</string>
    <string name="app_registration">Registration</string>
    <string name="action_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="cancel_questionnaire_message">Are you sure you want to cancel?</string>
    <string name="inputs_missing">Check all missing fields</string>
    <string name="resources_saved">Record saved!</string>

    <plurals name="ageYear">
        <item quantity="one">%d year old</item>
        <item quantity="other">%d years old</item>
    </plurals>
    <plurals name="ageMonth">
        <item quantity="one">%d month old</item>
        <item quantity="other">%d months old</item>
    </plurals>
    <plurals name="ageDay">
        <item quantity="one">%d day old</item>
        <item quantity="other">%d days old</item>
    </plurals>


</resources>