<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.imeja.milk_bank.landing.DashboardFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.imeja.milk_bank.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.imeja.milk_bank.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/activeFragment"
        android:name="com.imeja.milk_bank.landing.inner.ActiveFragment"
        android:label="fragment_active"
        tools:layout="@layout/fragment_active" >
        <action
            android:id="@+id/navigate_to_registration"
            app:destination="@id/registrationFragment" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.imeja.milk_bank.ui.patients.RegistrationFragment"
        android:label="@string/app_registration"
        tools:layout="@layout/fragment_registration" />
</navigation>