<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/ten_dp">

    <ImageView
        android:id="@+id/status"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_status"
        android:gravity="center_vertical"
        android:src="@drawable/ic_baseline_circle_24" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/status"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/navya_patel" />

    <TextView
        android:id="@+id/field_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignStart="@id/name"
        android:singleLine="true"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/white"
        android:text="@string/_50_years_old" />

    <TextView
        android:id="@+id/id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_name"
        android:layout_alignStart="@id/name"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/status"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/white"
        android:text="@string/id_456" />
</RelativeLayout>
