<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".auth.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/login_banner" />

                </RelativeLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:text="Welcome to"
                                android:textAllCaps="true"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:text=" NNDAK "
                                android:textAllCaps="true"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textColor="@color/purple_200"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:text="Mobile"
                                android:textAllCaps="true"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/LoginTextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/white"
                            app:hintTextColor="@color/white"
                            app:startIconDrawable="@drawable/ic_icon_mail"
                            app:startIconTint="@color/white">

                            <AutoCompleteTextView
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/white" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_mlarge" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/LoginTextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/white"
                            app:hintTextColor="@color/white"
                            app:startIconDrawable="@drawable/ic_icon_lock"
                            app:startIconTint="@color/white">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_mlarge" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_signin"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="-4dp"
                            android:outlineSpotShadowColor="@color/white"
                            android:text="@string/signin"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            app:cornerRadius="25dp"
                            app:rippleColor="@color/white"
                            app:strokeColor="@color/white" />

                        <TextView
                            android:id="@+id/reset_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="Forgot Password ?"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:gravity="center"
                            android:orientation="horizontal">

                        </LinearLayout>


                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>